# spatch

./: .gitignore  .pre-commit-config.yaml  README.md  prototype_backend.py  prototype_example.py  prototype_module.py  pyproject.toml
.github/workflows/: build-docs.yml  ci.yml  pre-commit.yml
docs/: Makefile
docs/source/: EXAMPLE_README.md  conf.py  design_choices.md  index.md  overview.md
docs/source/api/: for_backends.rst  for_libraries.rst  for_users.rst  index.rst
spatch/: __init__.py  backend_system.py  backend_utils.py  utils.py
spatch/_spatch_example/: README.md  backend.py  entry_point.py  entry_point2.py  library.py
src/spatch/: __init__.py  __main__.py  backend_system.py  backend_utils.py  testing.py  utils.py
src/spatch/_spatch_example/: README.md  backend.py  entry_point.py  entry_point.toml  entry_point2.py  entry_point2.toml  library.py
tests/: test_backend_utils.py  test_context.py  test_general.py  test_priority.py
